--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,16 @@
 services:
-  db:
-    image: 'postgres:latest'
-    container_name: db_cont
-    ports:
-      - 5432:5432
-    env_file:
-      - .env
-    networks:
-      - postgres-networks
-    volumes:
-      - ./../MyBankProject/db-data/:/var/lib/postgresql/data/
-      
   app:
     container_name: tgbot_cont
     ports:
-      - 2266:2266
+      - 2265:2265
     build: .
-    depends_on:
-      - db
     env_file:
       - .env
     networks:
       - postgres-networks
     volumes:
-      - ./files:/bankAPI/files
+      - ./../MyBankProject/files:/tgApp/files
 
 networks:
   postgres-networks:
-    driver: bridge
+    external: true
